--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar.Overlay" />
         <activity
+            android:name=".mvp.chapter.activity.SortActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar.Overlay" />
+        <activity
             android:name=".mvp.page.activity.PagerActivity"
             android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar.Overlay" />
